--- a/Final Project Report/proposal.bib
+++ b/Final Project Report/proposal.bib
@@ -60,7 +60,7 @@
 	title = {SONYC Urban Sound Tagging (SONYC-UST): a multilabel dataset from an urban acoustic sensor network},
 	address = {New York USA},
 	school = {New York University}
-	year = 2020,
+	year = {2020}
 }
 
 @misc{8,
@@ -70,4 +70,13 @@
 	month = {January},
 	year = {2013}	
 }
+@misc{9,
+	author = {Lauro Lins, James T. Klosowski, and Carlos Scheidegger},
+	title = {Nanocubes for Real-Time Exploration of Spatiotemporal Datasets},
+	howpublished = {},
+	month = {January},
+	year = {2013}	
+}
+
+
 
