Visual system desription

--- a/Final Project Report/03-data.tex
+++ b/Final Project Report/03-data.tex
@@ -3,7 +3,7 @@ In order to build a system which would visualize the various sound points in and
 
 	\begin{figure}[h!]
 	\includegraphics[width=6cm]{figure5}
-	\caption{A snapshot of our dataset}
+	\caption{A snapshot of the dataset labels}
 \end{figure}
 
 fig 1 shows all the fine level and course level classes. The course level lists down all the different catagories of  sound samples that are captured, whereas fine level describes the all the sub-classes in these main classes. For example the group Engine has small-sounding-engine, medium-sounding-engine, large-sounding-engine as the fine-level classes.
